# funkplace

./: Cargo.toml  build.ps1  package.json
docs/: index.html  placeplace.js  placeplace_bg.wasm  style.css
src/: image.rs  lib.rs  palette.rs
